# AgentMesh

./: .gitignore  AGENT.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  README.zh-CN.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  pyrightconfig.json  ruff.toml
.github/ISSUE_TEMPLATE/: 1-bug-report.yml  2-feature-request.yml
.github/workflows/: ci.yml  release.yml
docs/: a2a-sdk_adoption.md  m1-m4_execution_plan.md
docs/diagrams/: component-overview.en.puml  component-overview.zh-CN.puml  discovery-invoke-flow.en.puml  discovery-invoke-flow.zh-CN.puml
examples/: demo.sh
examples/py-agent/: main.py
scripts/: check_release_versions.py  render_diagrams.sh
tests/e2e/: conftest.py  mock_agent.py  test_smoke_discover.py  test_smoke_install.py  test_smoke_run.py  test_smoke_trace.py
